update to js file

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
     <div class="question-container">
       <h1 id="question">Heading</h1>
       <div class="w-form">
-        <form id="answer-form" name="email-form" data-name="Email Form"><input type="text" class="textfield w-input" maxlength="256" name="answer" data-name="answer" placeholder="Type your answer here..." id="answer" required="">
-          <div class="cta-container"><a id="hint-btn" href="#" class="button secondary w-button">HINT</a><input type="submit" value="Submit" id="submit-btn" class="button primary w-button"></div>
+        <form id="answer-form" name="email-form" data-name="Email Form">
+          <input type="text" class="textfield w-input" maxlength="256" name="answer" data-name="answer"
+          placeholder="Type your answer here..." id="answer" required="">
+          <div class="cta-container"><a id="hint-btn" href="#" class="button secondary w-button">HINT</a>
+            <input type="submit" value="Submit" id="submit-btn" class="button primary w-button">
+          </div>
         </form>
         <div class="w-form-done">
           <div>Thank you! Your submission has been received!</div>
