--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="quiz">
         <h1 id="heading">Question Placeholder</h1>
         <input id="input" placeholder="Type you answer..."></input>
         <button class="button" id="submit-btn">Submit</button>
+    </div>
+    <div class="container success" id="success">
+        <h1 class="success-header">Success</h1>
     </div>
     <script src="esi2018.js"></script>
 </body>
