no changes just treehouse preactice

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container" id="quiz">
         <h1 id="heading">Question Placeholder</h1>
         <input id="input" placeholder="Type you answer..."></input>
-        <button class="button" id="submit-btn">Submit</button>
+<button class="btn-primary" id="btn-submit">Submit</button>
     </div>
     <div class="container success" id="success">
         <h1 class="success-header">Success</h1>
