added a break point!

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container" id="quiz">
+    <div class="container-quiz" id="quiz">
         <h1 id="heading">Question Placeholder</h1>
         <input id="input" placeholder="Type you answer..."></input>
 <button class="btn-primary" id="btn-submit">Submit</button>
     </div>
-    <div class="container success" id="success">
-        <h1 class="success-header">Success</h1>
+    <div class="container-letter" id="letter">
+        <h1 class="letter-header">Success</h1>
     </div>
     <script src="esi2018.js"></script>
 </body>
