added a basic grid

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container-quiz" id="quiz">
-        <h1 id="heading">Question Placeholder</h1>
-        <input id="input" placeholder="Type you answer..."></input>
-<button class="btn-primary" id="btn-submit">Submit</button>
-    </div>
-    <div class="container-letter" id="letter">
-        <h1 class="letter-header">Success</h1>
+    <div class="section">
+        <div class="container--col8" id="quiz">
+            <h1 id="heading">Question Placeholder</h1>
+            <input class="input-answer" id="input" placeholder="Type you answer..."></input>
+            <button class="btn-primary" id="btn-submit">Submit</button>
+        </div>
+        <div class="container--letter" id="letter">
+            <h1 class="letter-header">Success</h1>
+        </div>
     </div>
     <script src="esi2018.js"></script>
 </body>
