done base styling!

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="section">
-        <div class="container--col8" id="quiz">
-            <h1 id="heading">Question Placeholder</h1>
-            <input class="input-answer" id="input" placeholder="Type you answer..."></input>
-            <button class="btn-primary" id="btn-submit">Submit</button>
-        </div>
-        <div class="container--letter" id="letter">
-            <h1 class="letter-header">Success</h1>
+    <div class="section section__quiz" id="quiz">
+        <h1 class="quiz__question" id="heading">Question Placeholder</h1>
+        <input class="input" id="input-answer" placeholder="Type you answer..."></input>
+        <div class="cta-wrapper">
+            <button class="btn btn--silent">Hint</button>
+            <button class="btn btn--primary" id="btn-submit">Submit</button>
         </div>
     </div>
+    <!-- <div class="section section__birthday-letter" id="birthday-letter">
+        <h1 class="success__header">Success</h1>
+    </div> -->
     <script src="esi2018.js"></script>
 </body>
 </html>
