added baic structure to birthday letter

--- a/index.html
+++ b/index.html
@@ -9,15 +9,39 @@
 <body>
     <div class="section section__quiz" id="quiz">
         <h1 class="quiz__question" id="heading">Question Placeholder</h1>
-        <input class="input" id="input-answer" placeholder="Type you answer..."></input>
+        <input class="input" id="input-answer" placeholder="Type you answer..." autofocus></input>
         <div class="cta-wrapper">
             <button class="btn btn--silent">Hint</button>
             <button class="btn btn--primary" id="btn-submit">Submit</button>
         </div>
     </div>
-    <!-- <div class="section section__birthday-letter" id="birthday-letter">
-        <h1 class="success__header">Success</h1>
-    </div> -->
+    <div class="section section__birthday-letter" id="birthday-letter">
+        <div class="birthday-letter__gallery">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+        <div class="birthday-letter__text">
+            <h1 class="birthday-letter__title">Happy Birthday</h1>
+            <p class="birthday-letter__body">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et mauris vel mauris molestie pretium. Vivamus nec odio
+                enim. Aenean ac lacinia velit. Suspendisse vestibulum dolor felis, ut gravida purus interdum quis. Ut sodales eros ut
+                pulvinar aliquam. Etiam dignissim ipsum nisi, id pretium nisl tincidunt in. Etiam vitae sollicitudin dui. Nullam auctor
+                est sed urna feugiat, ac tempus quam venenatis. Aenean vel nisl id dolor fringilla eleifend. Proin pharetra fermentum
+                pharetra. In congue dolor at ligula suscipit, non scelerisque enim mollis. Nunc faucibus elit metus, faucibus laoreet
+                mi facilisis eu. Morbi augue massa, ultricies a malesuada vel, posuere eu tortor.
+                <br>
+                Nullam ligula massa, convallis id leo posuere, vestibulum malesuada quam. Phasellus ut lectus tempus, vehicula quam
+                nec, sagittis turpis. Sed id metus odio. In id ligula et justo tempus porttitor. Vestibulum ante ipsum primis in
+                faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque id mattis metus. Cras mattis faucibus orci, sit
+                amet sollicitudin ex imperdiet sed.
+                <br>
+                Nullam efficitur scelerisque neque ac ullamcorper. Nam accumsan neque ut tristique dapibus. Sed hendrerit justo quam,
+                quis varius felis iaculis eget. Suspendisse arcu arcu, sollicitudin sit amet egestas nec, porttitor sit amet nunc.
+                Phasellus mattis luctus ipsum sed aliquam.
+            </p>
+        </div>
+    </div>
     <script src="esi2018.js"></script>
 </body>
 </html>
