added grid to gallery and figured out flexbox issues on parent divs

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     </div>
     <div class="section section__birthday-letter" id="birthday-letter">
         <div class="birthday-letter__gallery">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <div class="gallery__image-one"></div>
+            <img class="gallery__image-two" alt="">
+            <img class="gallery__image-three" src="" alt="">
         </div>
         <div class="birthday-letter__text">
-            <h1 class="birthday-letter__title">Happy Birthday</h1>
+            <h1 class="birthday-letter__title">Happy Birthday 🎉</h1>
             <p class="birthday-letter__body">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et mauris vel mauris molestie pretium. Vivamus nec odio
                 enim. Aenean ac lacinia velit. Suspendisse vestibulum dolor felis, ut gravida purus interdum quis. Ut sodales eros ut
