layout is working correctly and images are in place

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="section section__birthday-letter" id="birthday-letter">
         <div class="birthday-letter__gallery">
             <div class="gallery__image-one"></div>
-            <img class="gallery__image-two" alt="">
-            <img class="gallery__image-three" src="" alt="">
+            <div class="gallery__image-two"></div>
+            <div class="gallery__image-three"></div>
         </div>
         <div class="birthday-letter__text">
             <h1 class="birthday-letter__title">Happy Birthday 🎉</h1>
