--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="gallery__image-three"></div>
         </div>
         <div class="birthday-letter__text">
-            <h1 class="birthday-letter__title">Happy Birthday 🎉</h1>
+            <h1 class="birthday-letter__title">Happy New Years! 🎉</h1>
             <p class="birthday-letter__body">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et mauris vel mauris molestie pretium. Vivamus nec odio
                 enim. Aenean ac lacinia velit. Suspendisse vestibulum dolor felis, ut gravida purus interdum quis. Ut sodales eros ut
