--- a/index.html
+++ b/index.html
@@ -24,21 +24,37 @@
         <div class="birthday-letter__text">
             <h1 class="birthday-letter__title">Happy New Years! 🎉</h1>
             <p class="birthday-letter__body">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et mauris vel mauris molestie pretium. Vivamus nec odio
-                enim. Aenean ac lacinia velit. Suspendisse vestibulum dolor felis, ut gravida purus interdum quis. Ut sodales eros ut
-                pulvinar aliquam. Etiam dignissim ipsum nisi, id pretium nisl tincidunt in. Etiam vitae sollicitudin dui. Nullam auctor
-                est sed urna feugiat, ac tempus quam venenatis. Aenean vel nisl id dolor fringilla eleifend. Proin pharetra fermentum
-                pharetra. In congue dolor at ligula suscipit, non scelerisque enim mollis. Nunc faucibus elit metus, faucibus laoreet
-                mi facilisis eu. Morbi augue massa, ultricies a malesuada vel, posuere eu tortor.
+                I'm happy this didn't turn out to be your birthday letter because I have way more to say now than I did then. At some
+                point through our relationship things took a turn. What started as a two people in New York bonding over behavioral
+                psychology eventually turned into two people drawing endless boundaries just to tolerate one another. My goal for this
+                letter is to address my faults through that process, and acknowledge the important things about you that make me crazy
+                about you. To remind myself and you why I truly love you.
                 <br>
-                Nullam ligula massa, convallis id leo posuere, vestibulum malesuada quam. Phasellus ut lectus tempus, vehicula quam
-                nec, sagittis turpis. Sed id metus odio. In id ligula et justo tempus porttitor. Vestibulum ante ipsum primis in
-                faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque id mattis metus. Cras mattis faucibus orci, sit
-                amet sollicitudin ex imperdiet sed.
+                You use to tell me I'm patient but truthfully I'm not. I might not be easily irritated but I'm not patient. Patience
+                and ones threshold there of only starts past the point of irritation. I have as little tolerance of things that
+                irritate me as you do. And for that I owe you a massive apology. I'm sorry I might seem calm at times but when it
+                counts get upset too quick. It's not important that I'm good at the things that don't matter to you as much. In the new
+                year I hope to show you again that the person I fell in love with and the reasons I fell in with her have always been
+                because of her sophistication, brilliance, beauty and capability to make me a better person.
                 <br>
-                Nullam efficitur scelerisque neque ac ullamcorper. Nam accumsan neque ut tristique dapibus. Sed hendrerit justo quam,
-                quis varius felis iaculis eget. Suspendisse arcu arcu, sollicitudin sit amet egestas nec, porttitor sit amet nunc.
-                Phasellus mattis luctus ipsum sed aliquam.
+                Throughout the year I've learned about history, I've become a pescatarian, I've become more aware of how unaware I am
+                to the world around me, I've learned too much about what triggers me emotionally and how to better manage them (still
+                got plenty of work todo on that) — and none of it would be possible if it weren't for this relationship.
+                <br>
+                Though the turning point in our relationship wasn't Tilly, I do want to address that, as I know you're reading this
+                thinking to yourself I've heard all these nice words before...
+                <br>
+                You've always been better than Tilly, and I know that everything that happened was due to my own insecurities not my
+                attractions. I left you because I didn't have the tools to make sense of my world with you. I've never been with anyone
+                like you and my identity felt compromised. I'm not intimidated by you anymore, I just hope I get the ability to prove
+                to you how much I really appreciate your perspective on the world and how much it effects me in positive ways. I hope
+                that in the new year I could learn from my mistakes from last, start new and prove to you that the person you are is
+                the person I fell in love with and though we hit a few bumps in the road thats always been true. Even now.
+                <br>
+                Thank you for coming into my life and filling it with so much I didn't have, you've left your mark, one of which can
+                never be erased.
+                <br>
+                I love you ❤️
             </p>
         </div>
     </div>
