--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
-    <title>Document</title>
+    <title>Happy New Years 🎉</title>
 </head>
 <body>
     <div class="section section__quiz" id="quiz">
