--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
             </p>
         </div>
     </div>
-    <script src="esi2018.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
