fetchin from airtable!

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="section section__quiz" id="quiz">
+        <div id="output"></div>
         <h1 class="quiz__question" id="heading">Question Placeholder</h1>
         <input class="input" id="input-answer" placeholder="Type you answer..." autofocus></input>
         <div class="cta-wrapper">
@@ -59,5 +60,6 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <script src="airtableAPI.js"></script>
 </body>
 </html>
