code not working with fetch api

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
     <script src="airtableAPI.js"></script>
 </body>
 </html>
